# chapters-extractor

./: README.md  accessible_epub_3 - ToC.md  extract_chapter.py  pyproject.toml  requirements.txt
src/epub_toc/: __init__.py  epub_toc.py
tests/: test_epub_toc.py
