[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["epub_toc"]

[tool.setuptools.package-dir]
"" = "src"

[project]
name = "epub-toc-md"
version = "0.1.0"
description = "Generate Markdown Table of Contents from EPUB files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["ebooklib"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
epub-toc-md = "epub_toc.epub_toc:main"